--- a/MySop/MySop.WebUI/Views/Home/Index.cshtml
+++ b/MySop/MySop.WebUI/Views/Home/Index.cshtml
@@ -18,21 +18,21 @@
 
     @foreach (var item in Model.Products)
     {
-        <div class="col-md-4" style="height:450px;padding:10px;margin:10px;border:solid thin whitesmoke">
-            <div class="col-md-12">
-                <img src="~/Content/ProductImages/@item.Image" style="height:250px" class="img" />
-            </div>
-            <div class="col-md-12">
-                <strong>@Html.ActionLink(item.Name, "Details", new { id = item.Id })</strong>
-            </div>
-            <div class="col-md-12">
-                <p>@item.Description</p>
-            </div>
-            <div class="col-md-12">
-                <h4>@item.Price</h4>
-            </div>
-            <div class="col-md-12">
-                <a href="@Url.Action("AddToBasket","Basket", new { Id = item.Id})" class="btn btn-default">Add to Basket</a>
+        <div class="col-md-4 card" style="height:400px;padding:10px;margin:10px;border:solid thin whitesmoke">
+            <img class="card-img-top"src="~/Content/ProductImages/@item.Image" style="height:200px" alt="Card image cap">
+            <div class="card-body">
+                <div class="col-md-12 card-title">
+                    <strong>@Html.ActionLink(item.Name, "Details", new { id = item.Id })</strong>
+                </div>
+                <div class="col-md-12">
+                    <p>@item.Description</p>
+                </div>
+                <div class="col-md-12">
+                    <h4>@item.Price</h4>
+                </div>
+                <div class="col-md-12">
+                    <a href="@Url.Action("AddToBasket","Basket", new { Id = item.Id})" class="btn btn-primary">Add to Basket</a>
+                </div>
             </div>
         </div>
     }
